--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://nemirovka1.github.io/candy-crush",
+  "homepage": "https://nemirovka1.github.io/CandyCrash__Game",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
